# llm_tale

./: .gitignore  README.md  pyproject.toml
cache/: opendrawer_code_gpt-4o.pkl  peginsert_code_gpt-4o.pkl  pickcube_code_gpt-4o.pkl  putbox_code_gpt-4o.pkl  stackcube_code_gpt-4o.pkl  takelid_code_gpt-4o.pkl
demos/: PegInsert_data_seed0.h5  PegInsert_data_seed2.h5  PegInsert_data_seed4.h5  PickCube_data_seed2.h5  StackCube_data_seed2.h5
models/: PegInsert_llm_bc_seed0.pth  PegInsert_llm_bc_seed2.pth  PegInsert_llm_bc_seed4.pth  PickCube_llm_bc_seed0.pth  PickCube_llm_bc_seed2.pth  PickCube_llm_bc_seed4.pth  StackCube_llm_bc_seed0.pth  StackCube_llm_bc_seed2.pth  StackCube_llm_bc_seed4.pth
notebooks/: code_generation.ipynb
scripts/: prepare_llm_bc.py  run_llm_bc.sh  run_llm_tale.py  run_llm_tale.sh
src/llm_tale/: llm_bc.py  llm_tale.py
src/llm_tale/agents/: cnn.py  ppo_skrl.py  state_process.py  td3_skrl.py
src/llm_tale/envs/maniskill_envs/tasks/: PegInsert.py  PickCube.py  StackCube.py
src/llm_tale/envs/maniskill_envs/utils/: parse_affordance.py  primitive_pt.py  skrl_wrapper.py
src/llm_tale/llm_planners/: __init__.py
src/llm_tale/llm_planners/affordance_level/: affordance_identifier.txt  pick_planner.txt  transport_planner.txt
src/llm_tale/llm_planners/task_level/: code_translator.txt  tl_backbone.txt  tl_content.txt
src/llm_tale/llm_planners/utils/: io_utils.py  modular_prompt.py  plan_utils.py  string_utils.py
src/llm_tale/utils/: plot_utils.py  rotation_utils.py
tests/: test_image.py  test_llm_bc.py  test_tasks.py
(+10 files in other folders)
