[project]
name = "llm-tale"
version = "0.1.0"
description = "LLM-Guided Task- and Affordance-Level Exploration (LLM-TALE)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops==0.8.1",
    "numpy==1.26.4",
    "openai==0.28",
    "opencv-python-headless==4.11.0.86",
    "protobuf==6.30.0",
    "skrl==1.2.0",
    "torch==2.0.0",
    "torchvision==0.15.1",
    "wandb==0.21.4",
    "mani_skill==3.0.0b7",
    "sapien==3.0.0b1",
    "pytest==8.4.2",
    "ipywidgets==8.1.7",
    "rlbench==1.2.0",
    "ipykernel==6.30.1",
]

[tool.uv.sources]
rlbench = { git = "https://github.com/stepjam/RLBench.git" }
